# maui-fiery

./: CMakeLists.txt  README.md  org.kde.fiery.desktop  org.kde.fiery.metainfo.xml
src/: CMakeLists.txt  assets.qrc  blocklist.txt  fiery.notifyrc  main.cpp  main.qml
src/controllers/: dbactions.cpp  dbactions.h  downloadsmanager.cpp  downloadsmanager.h  fierywebprofile.cpp  fierywebprofile.h  passwordmanager.cpp  passwordmanager.h  requestinterceptor.cpp  requestinterceptor.h  surf.cpp  surf.h  widevineinstaller.cpp  widevineinstaller.h
src/db/: db.cpp  db.h  script.sql
src/models/: bookmarksmodel.cpp  bookmarksmodel.h  downloadsmodel.cpp  downloadsmodel.h  historymodel.cpp  historymodel.h
src/views/: AppView.qml
src/views/browser/: ActionsMenu.qml  Browser.qml  BrowserLayout.qml  BrowserView.qml  WidevinePrompt.qml
src/views/history/: HistoryView.qml
src/views/home/: HomeView.qml
src/views/widgets/: BrowserTabButton.qml  BrowserTabViewButton.qml  NavigationBar.qml  SettingsDialog.qml  ShortcutsDialog.qml
